plasmaquick/appletpopup: don't resize in response to min/max size with invalid sizes

There's two cases where this can go wrong:
1. the current size is empty, because for example the full representation of an applet was never opened
This made AppletPopup::updateMinSize resize the window to the minimum size

2. the maximum size is empty
This made AppletPopup::updateMaxSize resize the window to be an empty size

In both cases, the applet popup would wrongly resize away from what the user configured

BUG: 490732


(cherry picked from commit 1651df42d57a229eb2dde30978b646c3b0419a81)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>